[Picture in Picture] Only show controls when mouse is moving on Windows.

A previous change made controls always appear when the mouse is moving
on all OS except Windows. This change gates handling the ET_MOUSE_MOVED
event to Windows OS.

Bug: 870120
Change-Id: I556c354643a920c34b973066369e26f38130705f
Reviewed-on: https://chromium-review.googlesource.com/1161300
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580457}
Former-commit-id: 6698555a6f8132847bd6198fa4d39a507999d6cd